# parslr

./: README.md  requirements.txt  setup.cfg
docs/: conf.py  index.rst
parslr/: Parslr.py  __init__.py  __main__.py  parslr_args.py
