[metadata]
# replace with your username:
name = parslr
version = 0.0.1
author = Maxim Menshikov
author_email = maxim@menshikov.org
description = Shortcuts for building ANTLR grammars and testing resulting parsers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maximmenshikov/parslr
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6